# netboot_web_panel

./: README.md
backend/: .gitignore  manage.py  pyproject.toml
backend/Booking/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/Server/: settings.py  urls.py
backend/config/: .env
frontend/: index.html  package-lock.json  package.json
frontend/mock-server/: db.json
frontend/src/: main.js
frontend/src/assets/: base.scss  fonts.scss  main.scss
frontend/src/components/: Backdrop.vue  BookPopup.vue  Header.vue  Machines.vue  RegisterForm.vue  RegisterHeader.vue  ReservationPopup.vue  SignInPopup.vue
frontend/src/router/: index.js
frontend/src/stores/: apiStore.js  machinesStore.js  userStore.js
frontend/src/views/: Main.vue  Register.vue
